--- a/package.json
+++ b/package.json
@@ -25,14 +25,14 @@
     "license": "ISC",
     "dependencies": {
         "@types/greensock": "^1.15.32",
-        "@types/jquery": "^2.0.41",
-        "@types/jqueryui": "^1.11.32",
-        "angular2": "2.0.0-beta.7",
-        "systemjs": "0.19.22",
-        "es6-promise": "^3.0.2",
-        "es6-shim": "^0.33.3",
-        "reflect-metadata": "0.1.2",
-        "rxjs": "5.0.0-beta.2",
-        "zone.js": "0.5.15"
+        "@types/jquery": "^2.0.48",
+        "@types/jqueryui": "^1.11.34",
+        "angular2": "^2.0.0-beta.7",
+        "es6-promise": "^3.3.1",
+        "es6-shim": "^0.33.13",
+        "reflect-metadata": "^0.1.2",
+        "rxjs": "^5.0.0-beta.2",
+        "systemjs": "^0.19.22",
+        "zone.js": "^0.5.15"
     }
 }
