--- a/package.json
+++ b/package.json
@@ -11,13 +11,14 @@
     },
     "devDependencies": {
         "assemble-less": "~0.5.3",
+        "concurrently": "^2.0.0",
         "grunt": "^1.0.1",
         "grunt-contrib-concat": "~0.3.0",
         "grunt-contrib-cssmin": "~0.6.1",
         "grunt-contrib-uglify": "~0.2.2",
         "grunt-contrib-watch": "~0.3.1",
         "grunt-jsbeautifier": "^0.2.13",
-        "concurrently": "^2.0.0",
+        "grunt-json-minification": "^0.2.1",
         "lite-server": "^2.1.0",
         "typescript": "^1.7.5",
         "typings": "^0.6.8"
